--- a/templates/geoApp/level_list.html
+++ b/templates/geoApp/level_list.html
@@ -9,13 +9,14 @@
         {% for level in level_list %}
           <div class="col">
           <div class="card shadow-sm">
-            <img src="/media/{{ level.Img }}" role="img" class="bd-placeholder-img card-img-top" width="100%" height="225">
+            <img src="/media/{{ level.img }}" role="img" class="bd-placeholder-img card-img-top" width="100%" height="225">
             <div class="card-body">
               <h4>{{level.name}}</h4>
               <p class="card-text">{{level.description}}</p>
               <div class="d-flex justify-content-between align-items-center">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Играть</button>
-
+                  <a href="/level/{{level.id}}">
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Играть</button>
+                  </a>
                 <small class="text-muted">Сложность: {{level.level}}</small>
               </div>
             </div>
