--- a/templates/main.html
+++ b/templates/main.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>{%block title%}{%endblock%}</title>
+    {%block head%}
+    {%endblock%}
 </head>
 <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-          <a class="my-0 ml-4 mr-md-auto font-weight-normal" href="/" style="color:white"><h3 class="first" style="font-family: comic sans ms;">Films Django</h3></a>
+          <a class="my-0 ml-4 mr-md-auto font-weight-normal" href="/" style="color:white"><h3 class="first" style="font-family: comic sans ms;">DrawBorders.com</h3></a>
 
 
 
