--- a/templates/geoApp/level_detail.html
+++ b/templates/geoApp/level_detail.html
@@ -9,18 +9,32 @@
 {%block content%}
 {%load static%}
     <h4>{{level.name}}</h4>
-    <div id="container">
+	<form action="{% url 'result' level.id %}" method="post">
+		{% csrf_token %}
+    	<div id="container">
 			<canvas id="imageView" width="1900" height="900">
 				<img src="/media/{{level.imgClean}}" id="photo" width="1900" height="1000">
 				<p>Unfortunately, your browser is currently unsupported by our web application. We are sorry for the inconvenience. Please use one of the supported browsers listed below, or draw the image you want using an offline tool.</p>
 				<p>Supported browsers: <a href="https://www.opera.com">Opera</a>, <a href="http://www.mozilla.com">Firefox</a>, <a href="http://www.apple.com/safari">Safari</a>, and <a href="http://www.konqueror.org">Konqueror</a>.</p>
 			</canvas>
+			<input type="hidden" id="canimg" value="putImage()">
+			<button type="submit" onclick="putImage()">Проверить</button>
 		</div>
+	</form>
+<button onclick="putImage()">Save as Image</button>
         <script>
             canvas = document.getElementById("imageView");
 			context = canvas.getContext("2d");
 			var img = document.getElementById("photo");
 			context.drawImage(img, 0, 0,1900,900);
         </script>
+		<script>
+			function putImage(){
+				canvas=document.getElementById("imageView");
+				var image = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream");
+				window.location.href=image
+				return image;
+			}
+		</script>
 		<script src="{% static 'js/script.js' %}"></script>
 {%endblock%}
